--- a/host_vars/dresrv/systemd/backup-gdrive.yml
+++ b/host_vars/dresrv/systemd/backup-gdrive.yml
@@ -6,6 +6,7 @@ __gdrive_exclude:
   - 'vcenter/**'
   - 'truenas/**'
   - 'macrium/**'
+  - 'theia/**'
 
 __sd_backup_gdrive:
   name: backup-gdrive
