Add role to install fzf from GitHub

--- a/playbooks/theia.yml
+++ b/playbooks/theia.yml
@@ -104,6 +104,9 @@
     - role: clevis
       tags: ["clevis"]
 
+    - role: fzf
+      tags: ["fzf"]
+
     - role: chezmoi
       tags: ["chezmoi"]
 
