Add zfs-zed role and configure it for theia

--- a/playbooks/theia.yml
+++ b/playbooks/theia.yml
@@ -107,6 +107,9 @@
     - role: fzf
       tags: ["fzf"]
 
+    - role: zfs_zed
+      tags: ["zfs", "zed"]
+
     - role: chezmoi
       tags: ["chezmoi"]
 
