--- a/host_vars/dresrv/samba.yml
+++ b/host_vars/dresrv/samba.yml
@@ -1,8 +1,8 @@
 ---
+
 samba_hosts_allow:
   - 127.0.0.1
-  - "{{ ansible_default_ipv4.network }}/24"
-  - 192.168.122.3
+  - "{{ home_net.general.cidr }}"
 
 samba_interfaces:
   - lo
@@ -14,46 +14,28 @@ samba_extra_global_options:
   "client min protocol": SMB2
   "server min protocol": SMB2
   "passdb backend": tdbsam
-  "load printers": no
-  "allow insecure wide links": no
-  "mangled names": no
-  "unix extensions": no
-  "unix password sync": yes
-  "pam password change": yes
-  # "local master": no
-  # "domain master": no
-  # "preferred master": no
-  # "disable netbios": yes
-  # "server role": standalone
-  # "wins support": no
+  "load printers": false
+  "allow insecure wide links": false
+  "mangled names": false
+  "unix extensions": false
+  "unix password sync": true
+  "pam password change": true
 
 samba_shares:
   homes:
     comment: "Home Directories"
-    browseable: no
-    writable: yes
-    "follow symlinks": yes
-    "wide links": yes
+    browseable: false
+    writable: true
+    "follow symlinks": true
+    "wide links": true
 
   srv:
     comment: "SSD Storage"
     path: "/srv"
-    writable: yes
+    writable: true
 
   tank:
     comment: "Rust Storage"
     path: "/tank"
-    writable: yes
+    writable: true
     "hide files": "yes"
-
-  www:
-    comment: "Web Root"
-    path: "{{ web_root }}"
-    writable: yes
-
-  motion:
-    comment: "Motion Storage"
-    path: "/tank/media/motion"
-    browseable: no
-    "read only": no
-    "valid users": "motion"
