--- a/playbooks/theia.yml
+++ b/playbooks/theia.yml
@@ -91,6 +91,14 @@
       loop: "{{ zfs_scrub_timers | default([]) }}"
       tags: ["zfs", "scrub"]
 
+    - name: Set tank SELinux context
+      community.general.sefcontext:
+        target: "/mnt/tank(/.*)?"
+        setype: var_t
+        state: present
+      notify: Restore tank SELinux context
+      tags: ["selinux"]
+
   roles:
     - role: systemd_networkd
       tags: ["networkd"]
@@ -126,5 +134,8 @@
       tags: ["node_exporter"]
 
   handlers:
+    - name: Restore tank SELinux context
+      ansible.builtin.command: restorecon -r /mnt/tank
+
     - name: Reload NFS shares
       ansible.builtin.command: exportfs -ar
