--- a/host_vars/theia/sanoid.yml
+++ b/host_vars/theia/sanoid.yml
@@ -8,6 +8,8 @@ syncoid_timers:
     options:
       - "--recursive"
       - "--no-sync-snap"
+      - '--exclude=".*\\/var\\/(cache|log|tmp)"'
+      - '--exclude=".*\\/var\\/lib\\/(containers|docker)"'
 
   - name: vm
     src: ssd/vm
