Add default postfix vars for servers

--- a/group_vars/servers/vars.yml
+++ b/group_vars/servers/vars.yml
@@ -21,3 +21,5 @@ sys_timezone: "Europe/Oslo"
 ssh_authorized_keys:
   - "{{ hostvars['desktop'].ssh_keys.andrei }}"
   - "{{ hostvars['laptop'].ssh_keys.andrei }}"
+
+domain: "vm.{{ domains['hb'] }}"
