--- a/playbooks/theia.yml
+++ b/playbooks/theia.yml
@@ -115,6 +115,9 @@
     - role: samba
       tags: ["samba"]
 
+    - role: postfix
+      tags: ["postfix"]
+
     - role: fzf
       tags: ["fzf"]
 
