--- a/host_vars/drepi/postfix.yml
+++ b/host_vars/drepi/postfix.yml
@@ -1,6 +1,10 @@
 ---
 
 smtp_credentials: "{{ vault_smtp_credentials }}"
+
+postfix_interfaces:
+  - all
+
 postfix_relay_domains:
   - name: "{{ domains['hb'] }}"
     relay_host: "{{ smtp_credentials['hb'].relay_host }}"
@@ -26,6 +30,10 @@ __postfix_networks:
 postfix_networks: "{{ __postfix_networks | flatten }}"
 
 postfix_main_config:
+  - regexp: "^#?smtp_use_tls"
+    line: "smtp_use_tls = yes"
+  - regexp: "^#?smtp_tls_security_level"
+    line: "smtp_tls_security_level = may"
   - regexp: "^#?mydomain"
     line: "mydomain = {{ domain }}"
   - regexp: "^#?myorigin"
@@ -34,8 +42,6 @@ postfix_main_config:
     line: "relay_domains = {{ __postfix_relay_domains | flatten | join(', ') }}"
   - regexp: "^#?sender_dependent_relayhost_maps"
     line: "sender_dependent_relayhost_maps = hash:/etc/postfix/relayhost_map"
-  - regexp: "^#?smtp_use_tls"
-    line: "smtp_use_tls = yes"
   - regexp: "^#?smtp_sasl_auth_enable"
     line: "smtp_sasl_auth_enable = yes"
   - regexp: "^#?smtp_sasl_security_options"
