--- a/host_vars/dresrv/systemd/systemd.yml
+++ b/host_vars/dresrv/systemd/systemd.yml
@@ -7,9 +7,9 @@ systemd_units:
   - "{{ __sd_concat_motion }}"
   - "{{ __sd_docker_auto_update }}"
   - "{{ __sd_fix_libvirtd_nat }}"
-  - "{{ __sd_mpop_refresh }}"
   - "{{ __sd_nextcloud_mount }}"
   - "{{ __sd_update_cloudflare }}"
+  # - "{{ __sd_mpop_refresh }}"
   # - "{{ __sd_backup_gitea }}"
   # - "{{ __sd_update_gitea }}"
   # - "{{ __sd_clear_recyle }}"
