--- a/host_vars/romgw01/wireguard.yml
+++ b/host_vars/romgw01/wireguard.yml
@@ -20,13 +20,16 @@ wireguard_ip: "{{ wireguard_addresses[0] | ansible.utils.ipaddr('address') }}"
 wireguard_ipv6: "{{ wireguard_addresses[1] | ansible.utils.ipaddr('address') }}"
 wireguard_private_key: "{{ vault_wireguard_private_key }}"
 wireguard_public_key: "{{ vault_wireguard_public_key }}"
+wireguard_persistent_keepalive: 300
 
 wireguard_unmanaged_peers:
   mt:
     endpoint: "{{ hostvars['mt-router'].wireguard_endpoint }}"
     allowed_ips: "{{ wireguard_mt_allowed_ips | join(', ') }}"
     public_key: "{{ hostvars['mt-router'].wireguard_public_key }}"
+    persistent_keepalive: "{{ wireguard_persistent_keepalive }}"
   webgw:
     endpoint: "{{ hostvars['webgw01'].wireguard_endpoint }}"
     allowed_ips: "{{ wireguard_webgw_allowed_ips | join(', ') }}"
     public_key: "{{ hostvars['webgw01'].wireguard_public_key }}"
+    persistent_keepalive: "{{ wireguard_persistent_keepalive }}"
