--- a/playbooks/rpi.yml
+++ b/playbooks/rpi.yml
@@ -18,7 +18,7 @@
       block:
         - name: Mount motion share
           ansible.posix.mount:
-            src: "{{ hostvars['truenas'].local_ips.general }}:/mnt/tank/media/motion"
+            src: "{{ hostvars['theia'].local_ips.general }}:/mnt/tank/media/motion"
             path: "/mnt/motion"
             opts: "defaults,vers=4,rw,noatime,bg"
             state: mounted
