--- a/playbooks/plex.yml
+++ b/playbooks/plex.yml
@@ -30,7 +30,7 @@
   tasks:
     - name: Mount media share
       mount:
-        src: "{{ hostvars['truenas'].local_ips.vm }}:/mnt/tank/media"
+        src: "{{ hostvars['theia'].local_ips.vm }}:/mnt/tank/media"
         path: "/tank/media"
         opts: "defaults,vers=4,ro,noatime,noexec,bg"
         state: mounted
