Remove k8s VMs from inventory

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 roles_path = roles
-inventory = hosts,kubespray/inventory/vsphere/inventory.ini
+inventory = hosts
 filter_plugins = filter_plugins
 vault_password_file = gopass-vault.sh
 library = ./library
