Allow multiple serial proxies

--- a/roles/serial_proxy/defaults/main.yml
+++ b/roles/serial_proxy/defaults/main.yml
@@ -1,5 +1,7 @@
 ---
 
-serial_proxy_src: "/dev/ttyUSB0"
-serial_proxy_port: 8888
-serial_proxy_baud: 2400
+serial_proxies:
+  - name: default
+    src: "/dev/ttyUSB0"
+    port: 8888
+    baud: 2400
