--- a/host_vars/rompi/firewall.yml
+++ b/host_vars/rompi/firewall.yml
@@ -15,6 +15,6 @@ firewall_rules:
   - port: "{{ wireguard_port }}"
     protocol: udp
 
-  - port: "{{ serial_proxy_port }}"
+  - port: "{{ (serial_proxies | selectattr('name', 'eq', 'pwr') | first).port }}"
     # Sad double NAT noises
     source: "192.168.100.5"
