--- a/host_vars/rompi/vars.yml
+++ b/host_vars/rompi/vars.yml
@@ -1,7 +1,9 @@
 ---
 
-serial_proxy_src: "/dev/ttyUSB0"
-serial_proxy_port: 8888
+serial_proxies:
+  - name: pwr
+    src: "/dev/ttyUSB0"
+    port: 8888
 
 node_exporter_allow_ips:
   - "{{ wg_net.mt.cidr }}"
