Move zigbee proxy to drepi

--- a/host_vars/drepi/firewall.yml
+++ b/host_vars/drepi/firewall.yml
@@ -32,6 +32,10 @@ firewall_rules:
   - port: "{{ node_exporter_port }}"
     source: "{{ hostvars['prom01'].ansible_host }}"
 
+  - port: "{{ (serial_proxies | selectattr('name', 'eq', 'zigbee') | first).port }}"
+    zone: public
+    source: "10.0.50.48"
+
   # RouterOS neighbour discovery
   - port: 5678
     source: "fe80::/64"
