Add hass stuck alerts, order servers in prom

--- a/playbooks/prom.yml
+++ b/playbooks/prom.yml
@@ -139,7 +139,7 @@
           targets: ["{{ hostvars[item].wireguard_ip | default(hostvars[item].ansible_host) }}:{{ hostvars[item].node_exporter_port }}"]
           labels:
             instance: "{{ hostvars[item].inventory_hostname }}"
-      loop: "{{ groups['servers'] | difference(__exclude_auto_node) }}"
+      loop: "{{ groups['servers'] | difference(__exclude_auto_node) | sort }}"
       tags: ["prometheus"]
 
     # - name: Set elastic exporters fact
@@ -167,7 +167,7 @@
         blackbox_exporter_targets_icmp_ipv4: "{{ blackbox_exporter_targets_icmp_ipv4 + [tmp_var] }}"
       vars:
         tmp_var: "{{ hostvars[item].wireguard_ip | default(hostvars[item].ansible_host) }}"
-      loop: "{{ groups['servers'] | difference(__exclude_auto_node) }}"
+      loop: "{{ groups['servers'] | difference(__exclude_auto_node) | sort }}"
       when: hostvars[item].wireguard_ip is defined or hostvars[item].ansible_host is defined
       tags: ["prometheus"]
 
