--- a/group_vars/prom/prometheus.yml
+++ b/group_vars/prom/prometheus.yml
@@ -7,6 +7,7 @@ server_label: "{{ hostvars.dresrv.inventory_hostname }}"
 romsto_label: "RomeoTV"
 __dresrv: "{{ hostvars['dresrv'] }}"
 
+prometheus_version: latest
 prometheus_port: 9090
 prometheus_storage_retention: "365d"
 prometheus_config_flags_extra:
