--- a/host_vars/theia/firewall.yml
+++ b/host_vars/theia/firewall.yml
@@ -38,4 +38,7 @@ firewalld_services:
     zone: public
     sources: "{{ firewall_trusted_sources }}"
 
-firewall_rules: []
+firewall_rules:
+  - port: 8384
+    zone: public
+    sources: "{{ proxy_hosts }}"
